--- a/src/app/pokemon-search/pokemon-search.component.html
+++ b/src/app/pokemon-search/pokemon-search.component.html
@@ -1,6 +1,6 @@
 <header>
   <div>
-    <img src="../assets/pokédex.png" alt="logo pokédex">
+    <img src="../assets/pokedex.png" alt="logo pokédex">
   </div>
   <form>
     <input type="text" #input (keyup.enter)="searchPokemon(input.value)" placeholder="Enter pokémon name">
